--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,17 @@
   "name": "digisoal-frontend",
   "version": "1.0.0",
   "private": true,
+  {
+  "name": "digisoal-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://<digisoal>.github.io/<DSaaS>",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
@@ -30,3 +41,4 @@
     ]
   }
 }
+
